--- a/arduino-js/index.html
+++ b/arduino-js/index.html
@@ -13,30 +13,33 @@
             -ms-user-select: none;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
+    <div class="graficos">
+        <div>
         <h1>Sensor DHT 11 - Umidade</h1>
-        <section style="width:45%">
+        <section style="width: 600px">
             <canvas id="dht11Umidade"></canvas>
         </section>
         <h1>Sensor DHT 11 - Temperatura</h1>
-        <section style="width: 45%;">
+        <section style="width: 600px;">
             <canvas id="dht11Temperatura"></canvas>
         </section>
-        <h1 style="display: none;">Sensor Luminosidade</h1>
-        <section style="width: 45%; display: none;">
+        <!-- <h1>Sensor Luminosidade</h1> -->
+        <section style="width: 0%;">
             <canvas id="luminosidade"></canvas>
         </section>
         <h1>Sensor LM 35 - Temperatura</h1>
-        <section style="width: 45%;">
+        <section style="width: 600px;">
             <canvas id="lm35Temperatura"></canvas>
         </section>
-        <h1 style="display: none;">Sensor Chave</h1>
-        <section style="width: 45%; display: none;">
+        <!-- <h1>Sensor Chave</h1> -->
+        <section style="width: 0%;">
             <canvas id="chave"></canvas>
         </section>
+        </div>
     </div>
 
     <script>
@@ -67,7 +70,7 @@
                         yAxes: [{
                             scaleLabel: {
                                 display: true,
-                                labelString: 'Umidade'
+                                labelString: 'Umidade'  
                             },
                             ticks: {
                                 beginAtZero: true
